syntax = "proto3";
package cs;

// 配置更新脚本输出内容
message ConfigUpdateOutput
{
    bytes context = 1;
}